fix read more, fix css for avatar and native scrollbar

--- a/default.css
+++ b/default.css
@@ -1,5 +1,18 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap");
 
+::-webkit-scrollbar {
+  width: 6px;
+}
+::-webkit-scrollbar-track {
+  background: #CBCBCB;
+}
+::-webkit-scrollbar-thumb {
+  background: #E2E2E2;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #D2D2D2;
+}
+
 :root {
   --primary-color: #3a4052;
 }
@@ -92,6 +105,7 @@ svg {
 .img {
   max-width: 111px;
   opacity: 0.4;
+  transform: scale(1);
 }
 
 .img:hover {
